<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="ch.bfh.mobicomp.leddr.ui.UnitMainFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectedUnit"
                android:id="@+id/selectedUnitText"
                android:textIsSelectable="false"
                style="@style/UnitText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectedUnit"
                android:textIsSelectable="false"
                style="@style/UnitText" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:id="@+id/unitText"
                android:textIsSelectable="false"
                style="@style/UnitTextBold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:padding="4dip">

            <ToggleButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/powerButton"
                android:id="@+id/powerButton"
                style="@style/BootstrapButton"
                android:checked="false"
                android:singleLine="false" />
        </TableRow>
    </TableLayout>
</FrameLayout>
